--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     </div>
     <div class="editor">
         <div class="scrollable-div div1">
-            <ul class="list-group list-group-flush" id="notes-list">
-            </ul>
+            <div class="list-group list-group-flush" id="notes-list"></div>
         </div>
         <textarea class="scrollable-div div2" id="editor-space" placeholder="# Title"></textarea>
         <div class="scrollable-div div3" id="render-space"></div>
